Disinstallato e reinstallato Laravel Mix. RIsolti problemi css

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,9 +1,17 @@
 
 h1{
-    color:red;
-    
+    color:blue;
+    margin: 20px 20px;
+    text-align: center;
+   
 }
 
-body{
-    background-color: red;
+p{
+   margin: 20px 0; 
 }
+
+h2{
+    color: blue;
+    margin: 20px 0;
+}
+
