--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,17 +1,4 @@
 
-h1{
-    color:blue;
-    margin: 20px 20px;
-    text-align: center;
-   
-}
-
-p{
-   margin: 20px 0; 
-}
-
-h2{
-    color: blue;
-    margin: 20px 0;
-}
-
+@import "partials/commons";
+@import "partials/index";
+@import "partials/show";
