--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19,17 +19,42 @@ body {
   margin: 40px 0;
   background-color: #fff;
 }
+@media screen and (max-width: 800px) {
+  .card {
+    display: block;
+  }
+}
+@media screen and (max-width: 600px) {
+  .card {
+    padding: 20px 0px;
+  }
+}
 .card img.cover {
   width: 400px;
   margin-right: 30px;
   display: block;
   transition: filter 1s;
 }
+@media screen and (max-width: 800px) {
+  .card img.cover {
+    margin: auto;
+  }
+}
+@media screen and (max-width: 600px) {
+  .card img.cover {
+    width: 200px;
+  }
+}
 .card img.cover:hover {
   filter: sepia();
 }
 .card .card-info {
   padding: 0px 10px;
+}
+@media screen and (max-width: 800px) {
+  .card .card-info {
+    text-align: center;
+  }
 }
 
 h1 {
@@ -73,12 +98,28 @@ a:focus {
 .container .column img.big-cover {
   width: 400px;
 }
+@media screen and (max-width: 600px) {
+  .container .column img.big-cover {
+    width: 200px;
+  }
+}
 .container .column .column-info {
   text-align: center;
 }
 .container .column .column-info p {
   text-align: justify;
 }
+@media screen and (max-width: 600px) {
+  .container .column .column-info p {
+    font-size: 14px;
+  }
+}
 .container .column a {
   margin: 30px 0;
+}
+
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 30px;
+  }
 }
