--- a/resources/sass/partials/_index.scss
+++ b/resources/sass/partials/_index.scss
@@ -5,11 +5,29 @@
     margin: 40px 0;
     background-color: #fff;
 
+    @media screen and (max-width:800px) {
+        display: block;
+    }
+
+    @media screen and (max-width:600px) {
+        padding: 20px 0px;
+    }
+
     img.cover{
         width: 400px;
         margin-right: 30px;
         display: block;
         transition: filter 1s;
+
+        @media screen and (max-width: 800px) { 
+                
+            margin:auto;
+        }
+
+        @media screen and (max-width: 600px) { 
+                
+            width:200px;
+        }
 
         &:hover{
             filter:sepia();
@@ -18,6 +36,10 @@
     
     .card-info{
         padding: 0px 10px;
+        @media screen and (max-width: 800px) { 
+                
+            text-align:center;
+        }
     }
 }
 
