--- a/resources/sass/partials/_show.scss
+++ b/resources/sass/partials/_show.scss
@@ -11,6 +11,11 @@
         img.big-cover{
         
             width: 400px;
+
+            @media screen and (max-width: 600px) { 
+                
+                width:200px;
+            }
         }
 
         .column-info {
@@ -18,6 +23,11 @@
 
             p{
                 text-align: justify;
+
+                @media screen and (max-width: 600px) { 
+                
+                    font-size:14px;
+                }
             }
         }
         
@@ -26,4 +36,11 @@
         }
     }
 
+}
+
+h1{
+    @media screen and (max-width: 600px) { 
+                
+        font-size:30px;
+    }  
 }
