--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,8 @@
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
 
-@import "partials/commons";
-@import "partials/index";
-@import "partials/show";
+// Variables
+@import 'variables';
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
